Bug 167527 - Writer: Title letters cut from below
Summary: Writer: Title letters cut from below
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Bayram Çiçek
URL:
Whiteboard: target:26.2.0 inReleaseNotes:26.2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-16 17:06 UTC by Bayram Çiçek
Modified: 2025-10-03 08:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
docx bugdoc, letters cut from below. (60.19 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-07-16 17:39 UTC, Bayram Çiçek
Details
letters cut from below writer vs mso word (157.57 KB, image/png)
2025-07-17 08:09 UTC, Bayram Çiçek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bayram Çiçek 2025-07-16 17:06:23 UTC
Description:
In MSO Word if line spacing is 80%, letters are show fully. But if the bugdoc opened in LO Writer, some letters like "Ç", "g", "p" etc. remain cut from below.

Steps to Reproduce:
1.Open the bugdoc in LO Writer.
2.some letters like "Ç", "g", "p" etc. remain cut from below.

Actual Results:
letters "Ç", "ş", "g", "p" etc. remain cut from below.

Expected Results:
letters should not cut from below.


Reproducible: Always


User Profile Reset: No

Additional Info:
- bugdoc created in MSO Word and line spacing is "Multiple and 0.8" (Right click > Paragraph... > Spacing).
- bugdoc in LO Writer: (Right click > Paragraph > Paragraph... > Line Spacing)
line spacing is "Proportional and 80%"
Comment 1 Bayram Çiçek 2025-07-16 17:39:30 UTC
Created attachment 201821 [details]
docx bugdoc, letters cut from below.
Comment 2 m_a_riosv 2025-07-16 22:41:50 UTC
Not all letter are affected, and changing the size, less of them.

Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 27943324726c52027b527ceb4fa7646c6f21ed17
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 3 Bayram Çiçek 2025-07-17 08:09:35 UTC
Created attachment 201830 [details]
letters cut from below writer vs mso word
Comment 4 Commit Notification 2025-07-22 11:22:23 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aced0ab0ee7541643f4eae8c1bf7ee80f82fabc3

tdf#167527: adjust field shadings according to line spacing

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.