tdf#167527: adjust field shadings according to line spacing

- we should take line spacing into account for field shadings.
- otherwise, bottom of some letters(e.g. "Ç", "ş", "g", "p") will be cut because of the "field shadings" background layer.
- also check if line spacing type is "proportional" or "fixed".
- add a unittest

Signed-off-by: Bayram Çiçek <bayram.cicek@collabora.com>
Change-Id: I805551469f712ec6147b025d771d996ef7fd0c95
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187986
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins